--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -355,6 +355,7 @@
     <Compile Include="Models\Personel.cs" />
     <Compile Include="Models\Roles.cs" />
     <Compile Include="Models\RolesAuth.cs" />
+    <Compile Include="Models\SevkiyatBarkodFormModel.cs" />
     <Compile Include="Models\SignInTBL.cs" />
     <Compile Include="Models\SignIn.cs" />
     <Compile Include="Models\SiparisModel.cs" />
@@ -1995,6 +1996,7 @@
     <Content Include="assets\css\github_contribution_graph.css" />
     <Content Include="assets\css\mutluyillar.css" />
     <Content Include="assets\css\password-strength.css" />
+    <Content Include="assets\css\printjs.min.css" />
     <Content Include="assets\css\sharp.css">
       <DependentUpon>sharp.scss</DependentUpon>
     </Content>
@@ -4228,6 +4230,7 @@
     <Content Include="assets\js\main.js" />
     <Content Include="assets\js\mutluyillar.js" />
     <Content Include="assets\js\pages-account-settings-account.js" />
+    <Content Include="assets\js\printjs.min.js" />
     <Content Include="assets\js\QrScanner.js" />
     <Content Include="assets\js\strength.js" />
     <Content Include="assets\js\ui-modals.js" />
@@ -4255,6 +4258,7 @@
     <Content Include="Content\hata.mp3" />
     <Content Include="Content\Images\efeceyazi.png" />
     <Content Include="Content\Images\logoefece.png" />
+    <Content Include="DesignOutput\Sevkiyat\Content\SevkiyatDesign.png" />
     <Content Include="Satis\Content\teklif.png" />
     <Content Include="Content\Open_Sans\OFL.txt" />
     <Content Include="Content\Open_Sans\README.txt" />
@@ -5433,6 +5437,22 @@
     <Content Include="Views\Satis\Tekliflerim.cshtml" />
     <Content Include="Views\Sevkiyat\MalKabulFormu.cshtml" />
     <Content Include="Views\Sevkiyat\SevkMalKabul.cshtml" />
+    <Content Include="Views\Sevkiyat\SaticiSiparisRaporuPartials\SiparisRaporuBelgeList_Modal.cshtml" />
+    <Content Include="Views\Sevkiyat\SaticiSiparisRaporuPartials\SiparisRaporu_Modal.cshtml" />
+    <Content Include="Views\Sevkiyat\SevkMalKabulPartials\SevMalKabulSeriNo_Modal.cshtml" />
+    <Content Include="Views\Shared\_Layout_common.cshtml" />
+    <Content Include="Views\Sevkiyat\MusteriSiparisRaporuPartials\SevkFormu_Modal.cshtml" />
+    <Content Include="Views\Sevkiyat\MusteriSiparisRaporuPartials\SevkFormu_Barkod_Modal.cshtml" />
+    <Content Include="Views\Sevkiyat\MusteriSiparisRaporuPartials\SevkFormu_Belge_Modal.cshtml" />
+    <Content Include="Views\Sevkiyat\MusteriSiparisRaporuPartials\SevkFormu_Seri_Modal.cshtml" />
+    <Content Include="Views\Sevkiyat\SaticiSiparisRaporuPartials\SiparisRaporuBelgeList_Modal.cshtml" />
+    <Content Include="Views\Sevkiyat\SaticiSiparisRaporuPartials\SiparisRaporu_Modal.cshtml" />
+    <Content Include="Views\Sevkiyat\SevkMalKabulPartials\SevMalKabulSeriNo_Modal.cshtml" />
+    <Content Include="Views\Shared\_Layout_common.cshtml" />
+    <Content Include="Views\Sevkiyat\MusteriSiparisRaporuPartials\SevkFormu_Modal.cshtml" />
+    <Content Include="Views\Sevkiyat\MusteriSiparisRaporuPartials\SevkFormu_Barkod_Modal.cshtml" />
+    <Content Include="Views\Sevkiyat\MusteriSiparisRaporuPartials\SevkFormu_Belge_Modal.cshtml" />
+    <Content Include="Views\Sevkiyat\MusteriSiparisRaporuPartials\SevkFormu_Seri_Modal.cshtml" />
     <Content Include="Views\Shared\_Layout_common.cshtml" />
     <None Include="Views\Shared\_Layout_kullanici.cshtml" />
     <Content Include="Views\Shared\_Layout_Kur.cshtml" />
@@ -5440,6 +5460,8 @@
     <Content Include="Views\Sifre\Index.cshtml" />
     <Content Include="Views\Shared\_Layout_menu.cshtml" />
     <Content Include="Views\Shared\_Layout_menu2.cshtml" />
+    <Content Include="Views\Shared\_Layout_Satin_Alma.cshtml" />
+    <Content Include="Views\Shared\_Layout_ziyaretci_notlarim.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -5488,6 +5510,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\Fonts\" />
     <Folder Include="Satis\PDF\" />
     <Folder Include="Views\Auxiliary\" />
     <Folder Include="Views\Default\" />
@@ -5725,6 +5748,11 @@
     <Reference Include="Newtonsoft.Json.Bson, Version=1.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.Bson.1.0.2\lib\net45\Newtonsoft.Json.Bson.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
+    <Reference Include="QRCoder, Version=1.4.3.0, Culture=neutral, PublicKeyToken=c4ed5b9ae8358a28, processorArchitecture=MSIL">
+      <HintPath>..\packages\QRCoder.1.4.3\lib\net40\QRCoder.dll</HintPath>
+    </Reference>
     <Reference Include="ServiceStack.Client, Version=6.0.0.0, Culture=neutral, PublicKeyToken=02c12cbda47e6587, processorArchitecture=MSIL">
       <HintPath>..\packages\ServiceStack.Client.6.8.0\lib\net472\ServiceStack.Client.dll</HintPath>
     </Reference>
@@ -5733,6 +5761,15 @@
     </Reference>
     <Reference Include="ServiceStack.Text, Version=6.0.0.0, Culture=neutral, PublicKeyToken=02c12cbda47e6587, processorArchitecture=MSIL">
       <HintPath>..\packages\ServiceStack.Text.6.8.0\lib\net472\ServiceStack.Text.dll</HintPath>
+    </Reference>
+    <Reference Include="SixLabors.Fonts, Version=1.0.0.0, Culture=neutral, PublicKeyToken=d998eea7b14cab13, processorArchitecture=MSIL">
+      <HintPath>..\packages\SixLabors.Fonts.1.0.0-beta18\lib\netstandard2.0\SixLabors.Fonts.dll</HintPath>
+    </Reference>
+    <Reference Include="SixLabors.ImageSharp, Version=2.0.0.0, Culture=neutral, PublicKeyToken=d998eea7b14cab13, processorArchitecture=MSIL">
+      <HintPath>..\packages\SixLabors.ImageSharp.2.1.3\lib\net472\SixLabors.ImageSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="SixLabors.ImageSharp.Drawing, Version=1.0.0.0, Culture=neutral, PublicKeyToken=d998eea7b14cab13, processorArchitecture=MSIL">
+      <HintPath>..\packages\SixLabors.ImageSharp.Drawing.1.0.0-beta15\lib\net472\SixLabors.ImageSharp.Drawing.dll</HintPath>
     </Reference>
     <Reference Include="System.CodeDom, Version=7.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.CodeDom.7.0.0\lib\net462\System.CodeDom.dll</HintPath>
@@ -5754,6 +5791,11 @@
     <Reference Include="System.IdentityModel" />
     <Reference Include="System.IdentityModel.Tokens.Jwt, Version=6.29.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\System.IdentityModel.Tokens.Jwt.6.29.0\lib\net472\System.IdentityModel.Tokens.Jwt.dll</HintPath>
+    </Reference>
+    <Reference Include="System.IO.UnmanagedMemoryStream, Version=4.0.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.IO.UnmanagedMemoryStream.4.3.0\lib\net46\System.IO.UnmanagedMemoryStream.dll</HintPath>
+      <Private>True</Private>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System.Memory.Data, Version=7.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Memory.Data.7.0.0\lib\net462\System.Memory.Data.dll</HintPath>
