--- a/NOVA/Web.config
+++ b/NOVA/Web.config
@@ -32,7 +32,7 @@
       <forms loginUrl="/Login/Login" defaultUrl="/Login/Login" timeout="240" cookieless="UseCookies"/>
     </authentication>
     <sessionState mode="InProc" timeout="240" cookieless="false"/>
-    <compilation debug="false" targetFramework="4.8"/>
+    <compilation debug="true" targetFramework="4.8"/>
     <httpRuntime targetFramework="4.8"/>
     <customErrors mode="Off">
       <error statusCode="404" redirect="/Error/Page404"/>
@@ -310,6 +310,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Security.Principal.Windows" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
         <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Numerics.Vectors" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.1.4.0" newVersion="4.1.4.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
