--- a/NOVA/packages.config
+++ b/NOVA/packages.config
@@ -106,9 +106,13 @@
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
   <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net48" />
+  <package id="QRCoder" version="1.4.3" targetFramework="net48" />
   <package id="ServiceStack.Client" version="6.8.0" targetFramework="net481" />
   <package id="ServiceStack.Interfaces" version="6.8.0" targetFramework="net481" />
   <package id="ServiceStack.Text" version="6.8.0" targetFramework="net481" />
+  <package id="SixLabors.Fonts" version="1.0.0-beta18" targetFramework="net48" />
+  <package id="SixLabors.ImageSharp" version="2.1.3" targetFramework="net48" />
+  <package id="SixLabors.ImageSharp.Drawing" version="1.0.0-beta15" targetFramework="net48" />
   <package id="SweetAlert" version="1.0.0" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
@@ -132,6 +136,7 @@
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.Pipelines" version="7.0.0" targetFramework="net48" />
+  <package id="System.IO.UnmanagedMemoryStream" version="4.3.0" targetFramework="net48" />
   <package id="System.Linq" version="4.3.0" targetFramework="net48" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net48" />
   <package id="System.Management" version="7.0.1" targetFramework="net481" />
