--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -4256,6 +4256,7 @@
     <Content Include="Content\cıkıs.mp3" />
     <Content Include="Content\giris.mp3" />
     <Content Include="Content\hata.mp3" />
+    <Content Include="Content\Images\Asistan.png" />
     <Content Include="Content\Images\efeceyazi.png" />
     <Content Include="Content\Images\logoefece.png" />
     <Content Include="DesignOutput\Sevkiyat\Content\SevkiyatDesign.png" />
@@ -5396,7 +5397,7 @@
     <Content Include="Views\Satis\DetayliSiparis2_yedek.cshtml" />
     <Content Include="Views\SatinAlma\SatinAlmaRaporu.cshtml" />
     <Content Include="Views\IsEmri\IndexOld.cshtml" />
-    <Content Include="Views\IsEmri\Index.cshtml" />
+    <Content Include="Views\IsEmri\Is.cshtml" />
     <Content Include="Views\IsEmri\Test.cshtml" />
     <Content Include="Views\SatinAlma\Test.cshtml" />
     <Content Include="Views\Satis\HammaddeListesi.cshtml" />
@@ -5411,6 +5412,8 @@
     <Content Include="Views\Home\Test.cshtml" />
     <Content Include="Views\Home\assets\scss\styles.scss" />
     <Content Include="Views\IK\PersonelPuantaj.cshtml" />
+    <Content Include="Views\IsEmri\Index.cshtml" />
+    <Content Include="Views\Home\NovaAsistan\Asistan.cshtml" />
     <None Include="Views\Satis\maintenance.cshtml" />
     <Content Include="Views\Sevkiyat\SaticiSiparisRaporu.cshtml" />
     <Content Include="Views\Uretim\buttons.css" />
