--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -5450,6 +5450,7 @@
     <Content Include="Views\Sevkiyat\MusteriSiparisRaporuPartials\SevkFormu_Belge_Modal.cshtml" />
     <Content Include="Views\Sevkiyat\MusteriSiparisRaporuPartials\SevkFormu_Seri_Modal.cshtml" />
     <Content Include="Views\Shared\_Layout_common.cshtml" />
+    <Content Include="Views\Sevkiyat\DepoTransfer.cshtml" />
     <None Include="Views\Shared\_Layout_kullanici.cshtml" />
     <Content Include="Views\Shared\_Layout_Kur.cshtml" />
     <Content Include="Views\Shared\_layout_satinalma.cshtml" />
