Depolar Arası Transfer Eklendi.

--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -5443,14 +5443,16 @@
     <Content Include="Views\Sevkiyat\SaticiSiparisRaporuPartials\SiparisRaporuBelgeList_Modal.cshtml" />
     <Content Include="Views\Sevkiyat\SaticiSiparisRaporuPartials\SiparisRaporu_Modal.cshtml" />
     <Content Include="Views\Sevkiyat\SevkMalKabulPartials\SevMalKabulSeriNo_Modal.cshtml" />
-    <Content Include="Views\Shared\_Layout_common.cshtml" />
-    <Content Include="Views\Shared\_Layout_common.cshtml" />
     <Content Include="Views\Sevkiyat\MusteriSiparisRaporuPartials\SevkFormu_Modal.cshtml" />
     <Content Include="Views\Sevkiyat\MusteriSiparisRaporuPartials\SevkFormu_Barkod_Modal.cshtml" />
     <Content Include="Views\Sevkiyat\MusteriSiparisRaporuPartials\SevkFormu_Belge_Modal.cshtml" />
     <Content Include="Views\Sevkiyat\MusteriSiparisRaporuPartials\SevkFormu_Seri_Modal.cshtml" />
-    <Content Include="Views\Shared\_Layout_common.cshtml" />
     <Content Include="Views\Sevkiyat\DepoTransfer.cshtml" />
+    <Content Include="Views\Shared\_Layout_common.cshtml" />
+    <Content Include="Views\Sevkiyat\DepoTransferPartials\DepoTransfer_Partial.cshtml" />
+    <Content Include="Views\Sevkiyat\DepoTransferPartials\DepoTransfer_Barcode.cshtml" />
+    <Content Include="Views\Sevkiyat\DepoTransferPartials\DepoTransfer_Belge.cshtml" />
+    <Content Include="Views\Sevkiyat\DepoTransferPartials\DepoTransfer_BarkodRehber.cshtml" />
     <None Include="Views\Shared\_Layout_kullanici.cshtml" />
     <Content Include="Views\Shared\_Layout_Kur.cshtml" />
     <Content Include="Views\Shared\_layout_satinalma.cshtml" />
