İş Emri sayfası oluşturuldu.DL Kısmı düzenlendi.

--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -5414,6 +5414,8 @@
     <Content Include="Views\IK\PersonelPuantaj.cshtml" />
     <Content Include="Views\IsEmri\Index.cshtml" />
     <Content Include="Views\Home\NovaAsistan\Asistan.cshtml" />
+    <Content Include="Views\IsEmri\IsEmri.cshtml" />
+    <Content Include="Views\IsEmri\IsEmriPartials\RehberPartial.cshtml" />
     <None Include="Views\Satis\maintenance.cshtml" />
     <Content Include="Views\Sevkiyat\SaticiSiparisRaporu.cshtml" />
     <Content Include="Views\Uretim\buttons.css" />
