Print Helper Eklendi.

--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -382,6 +382,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Utils\AuthHelper.cs" />
+    <Compile Include="Utils\PrintHelper.cs" />
     <Compile Include="Utils\RoleHelper.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -5512,6 +5513,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\Fonts\" />
+    <Folder Include="DesignOutput\Uretim\UretimSonuKaydi\" />
     <Folder Include="Satis\PDF\" />
     <Folder Include="Views\Auxiliary\" />
     <Folder Include="Views\Default\" />
