İş Emri - TP partial olarak ayrıldı. Üretim Kaydı - Girdiler düzenlendi.

--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -3310,6 +3310,7 @@
     <Content Include="Views\Home\NovaAsistan\Asistan.cshtml" />
     <Content Include="Views\IsEmri\IsEmri.cshtml" />
     <Content Include="Views\IsEmri\IsEmriPartials\RehberPartial.cshtml" />
+    <Content Include="Views\IsEmri\IsEmriPartials\IsEmri_TP.cshtml" />
     <None Include="Views\Satis\maintenance.cshtml" />
     <Content Include="Views\Sevkiyat\SaticiSiparisRaporu.cshtml" />
     <Content Include="Views\Uretim\buttons.css" />
