MES dosyaları düzeltildi.

--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -3358,6 +3358,9 @@
     <Content Include="Views\Shared\_Layout_Satin_Alma.cshtml" />
     <Content Include="Views\Shared\_Layout_ziyaretci_notlarim.cshtml" />
     <Content Include="Views\Uretim\Index.cshtml" />
+    <Content Include="Views\Uretim\Partials\MES\ALL.cshtml" />
+    <Content Include="Views\Uretim\MES.cshtml" />
+    <Content Include="Views\Shared\_Layout_MES.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
