MES - Yetki eklendi.

--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -3310,9 +3310,21 @@
     <Content Include="Views\Shared\_Layout_Satin_Alma.cshtml" />
     <Content Include="Views\Shared\_Layout_ziyaretci_notlarim.cshtml" />
     <Content Include="Views\Uretim\Index.cshtml" />
-    <Content Include="Views\Uretim\Partials\MES\ALL.cshtml" />
     <Content Include="Views\Uretim\MES.cshtml" />
     <Content Include="Views\Shared\_Layout_MES.cshtml" />
+    <Content Include="Views\Uretim\Partials\MES\AllMachines\BK01.cshtml" />
+    <Content Include="Views\Uretim\Partials\MES\AllMachines\DL01.cshtml" />
+    <Content Include="Views\Uretim\Partials\MES\AllMachines\MH01.cshtml" />
+    <Content Include="Views\Uretim\Partials\MES\AllMachines\PB01.cshtml" />
+    <Content Include="Views\Uretim\Partials\MES\AllMachines\PB02.cshtml" />
+    <Content Include="Views\Uretim\Partials\MES\AllMachines\RF01.cshtml" />
+    <Content Include="Views\Uretim\Partials\MES\AllMachines\RF02.cshtml" />
+    <Content Include="Views\Uretim\Partials\MES\AllMachines\RF03.cshtml" />
+    <Content Include="Views\Uretim\Partials\MES\AllMachines\SM01.cshtml" />
+    <Content Include="Views\Uretim\Partials\MES\AllMachines\SM02.cshtml" />
+    <Content Include="Views\Uretim\Partials\MES\AllMachines\SM03.cshtml" />
+    <Content Include="Views\Uretim\Partials\MES\AllMachines\TP01.cshtml" />
+    <Content Include="Views\Uretim\Partials\MES\AllMachines\_MainPartial.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
