Üretim MES sayfası düzenlendi.

--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -2095,6 +2095,7 @@
     <Content Include="assets\img\icons\brands\google.png" />
     <Content Include="assets\img\icons\brands\instagram.png" />
     <Content Include="assets\img\icons\brands\mailchimp.png" />
+    <Content Include="assets\img\icons\brands\NOVA_LOGO_CIRCLE.png" />
     <Content Include="assets\img\icons\brands\Nova_White.png" />
     <Content Include="assets\img\icons\brands\Nova.png" />
     <Content Include="assets\img\icons\brands\slack.png" />
