Üretim hurda ve 2. kalite düzenlemeleri. Detayli Risk Limiti düzenlemesi.

--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -3264,6 +3264,7 @@
     <Content Include="Views\IsEmri\IsEmri.cshtml" />
     <Content Include="Views\IsEmri\IsEmriPartials\RehberPartial.cshtml" />
     <Content Include="Views\IsEmri\IsEmriPartials\IsEmri_TP.cshtml" />
+    <Content Include="Views\Finans\DetayliRiskLimiti.cshtml" />
     <None Include="Views\Satis\maintenance.cshtml" />
     <Content Include="Views\Sevkiyat\SaticiSiparisRaporu.cshtml" />
     <Content Include="Views\Uretim\buttons.css" />
@@ -3302,6 +3303,7 @@
     <Content Include="Views\Sevkiyat\DepoTransferPartials\DepoTransfer_Belge.cshtml" />
     <Content Include="Views\Sevkiyat\DepoTransferPartials\DepoTransfer_BarkodRehber.cshtml" />
     <Content Include="Views\Shared\_Layout_isemri.cshtml" />
+    <Content Include="Views\Shared\_Layout_Genel.cshtml" />
     <None Include="Views\Shared\_Layout_kullanici.cshtml" />
     <Content Include="Views\Shared\_Layout_Kur.cshtml" />
     <Content Include="Views\Shared\_layout_satinalma.cshtml" />
@@ -3326,6 +3328,8 @@
     <Content Include="Views\Uretim\Partials\MES\AllMachines\SM03.cshtml" />
     <Content Include="Views\Uretim\Partials\MES\AllMachines\TP01.cshtml" />
     <Content Include="Views\Uretim\Partials\MES\AllMachines\_MainPartial.cshtml" />
+    <Content Include="Views\Shared\_Layout_WebMenu.cshtml" />
+    <Content Include="Views\Shared\_Layout_MobileMenu.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
