--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -3265,6 +3265,11 @@
     <Content Include="Views\IsEmri\IsEmriPartials\RehberPartial.cshtml" />
     <Content Include="Views\IsEmri\IsEmriPartials\IsEmri_TP.cshtml" />
     <Content Include="Views\Finans\DetayliRiskLimiti.cshtml" />
+    <Content Include="Views\Finans\Partials\DetayliRiskLimiti\DogrudanBorclandirmaSistemi.cshtml" />
+    <Content Include="Views\Finans\Partials\DetayliRiskLimiti\VadesineGoreBorclar.cshtml" />
+    <Content Include="Views\Finans\Partials\DetayliRiskLimiti\BorcAlacak.cshtml" />
+    <Content Include="Views\Finans\Partials\DetayliRiskLimiti\CariBilgileri.cshtml" />
+    <Content Include="Views\Finans\Partials\DetayliRiskLimiti\Riskler.cshtml" />
     <None Include="Views\Satis\maintenance.cshtml" />
     <Content Include="Views\Sevkiyat\SaticiSiparisRaporu.cshtml" />
     <Content Include="Views\Uretim\buttons.css" />
@@ -3329,7 +3334,7 @@
     <Content Include="Views\Uretim\Partials\MES\AllMachines\TP01.cshtml" />
     <Content Include="Views\Uretim\Partials\MES\AllMachines\_MainPartial.cshtml" />
     <Content Include="Views\Shared\_Layout_WebMenu.cshtml" />
-    <Content Include="Views\Shared\_Layout_MobileMenu.cshtml" />
+    <Content Include="Views\Shared\_Layout_GenelMenu.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
