--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -3385,6 +3385,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Content\Fonts\" />
     <Folder Include="DesignOutput\Uretim\UretimSonuKaydi\" />
+    <Folder Include="PDFLER\" />
     <Folder Include="Satis\PDF\" />
     <Folder Include="Views\Auxiliary\" />
     <Folder Include="Views\Default\" />
