--- a/NOVA/packages.config
+++ b/NOVA/packages.config
@@ -105,6 +105,9 @@
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
   <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net48" />
+  <package id="PdfiumViewer" version="2.13.0.0" targetFramework="net48" />
+  <package id="PdfiumViewer.Native.x86.v8-xfa" version="2018.4.8.256" targetFramework="net48" />
+  <package id="PdfiumViewer.Native.x86_64.v8-xfa" version="2018.4.8.256" targetFramework="net48" />
   <package id="QRCoder" version="1.4.3" targetFramework="net48" />
   <package id="ServiceStack.Client" version="6.8.0" targetFramework="net481" />
   <package id="ServiceStack.Interfaces" version="6.8.0" targetFramework="net481" />
