--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -3337,7 +3337,6 @@
     <Content Include="Views\Uretim\Partials\MES\AllMachines\_MainPartial.cshtml" />
     <Content Include="Views\Shared\_Layout_WebMenu.cshtml" />
     <Content Include="Views\Shared\_Layout_GenelMenu.cshtml" />
-    <Content Include="Views\Uretim\PDFDemo.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -3628,6 +3627,9 @@
     </Reference>
     <Reference Include="PdfiumViewer, Version=2.13.0.0, Culture=neutral, PublicKeyToken=91e4789cfb0609e0, processorArchitecture=MSIL">
       <HintPath>..\packages\PdfiumViewer.2.13.0.0\lib\net20\PdfiumViewer.dll</HintPath>
+    </Reference>
+    <Reference Include="PdfPrintingNet, Version=5.2.7.0, Culture=neutral, PublicKeyToken=ded90f87675288f3, processorArchitecture=MSIL">
+      <HintPath>..\packages\PdfPrintingNet.5.2.7\lib\net20\PdfPrintingNet.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
