Uretim/AmbarGiris oluşturuldu

--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -3337,6 +3337,7 @@
     <Content Include="Views\Uretim\Partials\MES\AllMachines\_MainPartial.cshtml" />
     <Content Include="Views\Shared\_Layout_WebMenu.cshtml" />
     <Content Include="Views\Shared\_Layout_GenelMenu.cshtml" />
+    <Content Include="Views\Uretim\AmbarGiris.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
