--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -5334,6 +5334,8 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\jsPDF-autotable.js" />
+    <Content Include="Scripts\jsPDF.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\jqueryui-min.js" />
     <None Include="Views\Error\Error.cshtml" />
