--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -5371,7 +5371,7 @@
     <Content Include="Views\IsEmri\Is.cshtml" />
     <Content Include="Views\IsEmri\Test.cshtml" />
     <Content Include="Views\SatinAlma\Test.cshtml" />
-    <Content Include="Views\Satis\HammaddeListesi.cshtml" />
+    <Content Include="Views\Satis\FabrikaStok.cshtml" />
     <Content Include="Views\Satis\FiyatsizHammaddeListesi.cshtml" />
     <Content Include="Views\Home\mutluyillar.cshtml" />
     <Content Include="Views\Home\Maintenance.cshtml" />
