--- a/NOVA/Views/Web.config
+++ b/NOVA/Views/Web.config
@@ -1,55 +1,54 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <configuration>
   <configSections>
-    <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
-      <section name="host" type="System.Web.WebPages.Razor.Configuration.HostSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
-      <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
+    <sectionGroup name="system.web.webPages.razor"
+      type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+      <section name="host"
+        type="System.Web.WebPages.Razor.Configuration.HostSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"
+        requirePermission="false"/>
+      <section name="pages"
+        type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"
+        requirePermission="false"/>
     </sectionGroup>
   </configSections>
-
-	<system.web.extensions>
-		<scripting>
-			<webServices>
-				<jsonSerialization maxJsonLength="999999999" />
-			</webServices>
-		</scripting>
-	</system.web.extensions>
-
+  <system.web.extensions>
+    <scripting>
+      <webServices>
+        <jsonSerialization maxJsonLength="999999999"/>
+      </webServices>
+    </scripting>
+  </system.web.extensions>
   <system.web.webPages.razor>
-    <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+    <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
       <namespaces>
-        <add namespace="System.Web.Mvc" />
-        <add namespace="System.Web.Mvc.Ajax" />
-        <add namespace="System.Web.Mvc.Html" />
-        <add namespace="System.Web.Optimization" />
-        <add namespace="System.Web.Routing" />
-        <add namespace="NOVA" />
+        <add namespace="System.Web.Mvc"/>
+        <add namespace="System.Web.Mvc.Ajax"/>
+        <add namespace="System.Web.Mvc.Html"/>
+        <add namespace="System.Web.Optimization"/>
+        <add namespace="System.Web.Routing"/>
+        <add namespace="NOVA"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
-
   <appSettings>
-	  <add key="aspnet:MaxJsonDeserializerMembers" value="150000" />
-    <add key="webpages:Enabled" value="true" />
-	  <add key="ClientValidationEnabled" value="true" />
-	  <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="aspnet:MaxJsonDeserializerMembers" value="150000"/>
+    <add key="webpages:Enabled" value="true"/>
+    <add key="ClientValidationEnabled" value="true"/>
+    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
-
   <system.webServer>
-	 
     <handlers>
-      <remove name="BlockViewHandler" />
-      <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
+      <remove name="BlockViewHandler"/>
+      <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler"/>
     </handlers>
   </system.webServer>
-
   <system.web>
     <compilation>
       <assemblies>
-        <add assembly="System.Web.Mvc, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Mvc, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       </assemblies>
     </compilation>
   </system.web>
 </configuration>
+<!--ProjectGuid: 589B92BF-337F-4D76-AD5D-68A62409B24F-->
