--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -5246,6 +5246,7 @@
     <Content Include="loading\loading.css" />
     <Content Include="Scripts\ajax.js" />
     <Content Include="Scripts\bootstrap-icon.css" />
+    <Content Include="Scripts\bootstrap-table-mobile.min.js" />
     <Content Include="Scripts\bootstrap-table.min.css" />
     <Content Include="Scripts\bootstrap-table.min.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
@@ -5281,6 +5282,8 @@
     <Content Include="Scripts\DataTables\dataTables.uikit.js" />
     <Content Include="Scripts\DataTables\dataTables.uikit.min.js" />
     <Content Include="Scripts\doviz.js" />
+    <Content Include="Scripts\floating-labels.min.css" />
+    <Content Include="Scripts\fuse.js" />
     <Content Include="Scripts\heartBeat.js" />
     <Content Include="Scripts\instascan.min.js" />
     <Content Include="Scripts\jquery-3.5.1.js" />
@@ -5339,6 +5342,7 @@
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\jqueryui-min.js" />
     <None Include="Views\Error\Error.cshtml" />
+    <Content Include="Scripts\moment-with-locales.min.js" />
     <Content Include="Scripts\reorder-rows.css" />
     <Content Include="Scripts\select2.css" />
     <Content Include="Scripts\select2.min.js" />
