--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -5464,6 +5464,7 @@
     <Content Include="Views\Shared\_Layout_WebMenu.cshtml" />
     <Content Include="Views\Shared\_Layout_GenelMenu.cshtml" />
     <Content Include="Views\Uretim\AmbarGiris.cshtml" />
+    <Content Include="Views\Uretim\HurdaVeIkinciKaliteTransfer.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
