IK Controller düzenlendi. Menü eklendi.

--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -8125,6 +8125,8 @@
     <Content Include="Views\Shared\_Layout_GenelMenu.cshtml" />
     <Content Include="Views\Uretim\AmbarGiris.cshtml" />
     <Content Include="Views\Uretim\HurdaVeIkinciKaliteTransfer.cshtml" />
+    <Content Include="Views\Shared\_Layout_Nova.cshtml" />
+    <Content Include="Views\Shared\_Layout_Nova_Menu.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
