--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -2048,9 +2048,6 @@
     <Content Include="assets\happy-new-year2022\src\index.html" />
     <Content Include="assets\happy-new-year2022\src\script.js" />
     <Content Include="assets\happy-new-year2022\src\style.css" />
-    <Content Include="assets\img\avatars\10056.png" />
-    <Content Include="assets\img\avatars\10055.png" />
-    <Content Include="assets\img\avatars\10054.png" />
     <Content Include="assets\img\avatars\10052.png" />
     <Content Include="assets\img\avatars\10001.png" />
     <Content Include="assets\img\avatars\10002.png" />
@@ -2104,7 +2101,6 @@
     <Content Include="assets\img\avatars\10049.png" />
     <Content Include="assets\img\avatars\10050.png" />
     <Content Include="assets\img\avatars\10000.png" />
-    <Content Include="assets\img\avatars\7.png" />
     <Content Include="assets\img\backgrounds\18.jpg" />
     <Content Include="assets\img\elements\1.jpg" />
     <Content Include="assets\img\elements\11.jpg" />
@@ -6710,6 +6706,8 @@
     <Content Include="Content\Images\Asistan.png" />
     <Content Include="Content\Images\efeceyazi.png" />
     <Content Include="Content\Images\logoefece.png" />
+    <Content Include="Content\Images\menu.mp4" />
+    <Content Include="DesignOutput\Content\EFECE_ETIKET_LACİVERT.png" />
     <Content Include="DesignOutput\Sevkiyat\Content\SevkiyatDesign.png" />
     <Content Include="Satis\Content\teklif.png" />
     <Content Include="Content\Open_Sans\OFL.txt" />
@@ -8127,6 +8125,7 @@
     <Content Include="Views\Uretim\HurdaVeIkinciKaliteTransfer.cshtml" />
     <Content Include="Views\Shared\_Layout_Nova.cshtml" />
     <Content Include="Views\Shared\_Layout_Nova_Menu.cshtml" />
+    <Content Include="Views\Uretim\UretimPlanlama.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
