--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -313,6 +313,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AmbarGirModel.cs" />
     <Compile Include="Controllers\AuxiliaryController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\FinansController.cs" />
@@ -6707,8 +6708,7 @@
     <Content Include="Content\Images\efeceyazi.png" />
     <Content Include="Content\Images\logoefece.png" />
     <Content Include="Content\Images\menu.mp4" />
-    <Content Include="DesignOutput\Content\EFECE_ETIKET_LACİVERT.png" />
-    <Content Include="DesignOutput\Sevkiyat\Content\SevkiyatDesign.png" />
+    <Content Include="Outputs\Sources\EFECE_ETIKET.png" />
     <Content Include="Satis\Content\teklif.png" />
     <Content Include="Content\Open_Sans\OFL.txt" />
     <Content Include="Content\Open_Sans\README.txt" />
@@ -8176,8 +8176,8 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\Fonts\" />
-    <Folder Include="DesignOutput\Uretim\UretimSonuKaydi\" />
-    <Folder Include="PDFLER\" />
+    <Folder Include="Outputs\Labels\Production\" />
+    <Folder Include="Outputs\Labels\Shipment\" />
     <Folder Include="Satis\PDF\" />
     <Folder Include="Views\Auxiliary\" />
     <Folder Include="Views\Default\" />
