--- a/NOVA/packages.config
+++ b/NOVA/packages.config
@@ -6,6 +6,7 @@
   <package id="bootstrap" version="5.2.3" targetFramework="net48" />
   <package id="BouncyCastle" version="1.8.9" targetFramework="net48" />
   <package id="DocumentFormat.OpenXml" version="2.20.0" targetFramework="net481" />
+  <package id="Ghostscript.NET" version="1.2.3.1" targetFramework="net48" />
   <package id="iTextSharp" version="5.5.13.3" targetFramework="net48" />
   <package id="JavaScriptEngineSwitcher.Core" version="3.21.0" targetFramework="net481" />
   <package id="jQuery" version="3.7.1" targetFramework="net48" />
