--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -6708,6 +6708,9 @@
     <Content Include="Content\Images\efeceyazi.png" />
     <Content Include="Content\Images\logoefece.png" />
     <Content Include="Content\Images\menu.mp4" />
+    <Content Include="Content\pdf.min.js" />
+    <Content Include="Content\pdf_viewer.min.css" />
+    <Content Include="Content\viewer.js" />
     <Content Include="Outputs\Sources\EFECE_ETIKET.png" />
     <Content Include="Satis\Content\teklif.png" />
     <Content Include="Content\Open_Sans\OFL.txt" />
@@ -8021,6 +8024,7 @@
     <Content Include="Views\Home\assets\css\styles.css" />
     <Content Include="Views\Home\assets\img\perfil.jpg" />
     <Content Include="Views\Home\assets\js\main.js" />
+    <Content Include="Views\IsEmri\IsEmri.cshtml" />
     <Content Include="Views\Login\Login.cshtml" />
     <Content Include="Views\Profil\Index.cshtml" />
     <Content Include="Views\IK\PersonelBilgi.cshtml" />
@@ -8046,7 +8050,6 @@
     <Content Include="Views\IK\PersonelPuantaj.cshtml" />
     <Content Include="Views\IsEmri\Index.cshtml" />
     <Content Include="Views\Home\NovaAsistan\Asistan.cshtml" />
-    <Content Include="Views\IsEmri\IsEmri.cshtml" />
     <Content Include="Views\IsEmri\IsEmriPartials\RehberPartial.cshtml" />
     <Content Include="Views\IsEmri\IsEmriPartials\IsEmri_TP.cshtml" />
     <Content Include="Views\Finans\DetayliRiskLimiti.cshtml" />
