--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ FodyWeavers.xsd
 /NOVA/Controllers/UretimController.cs
 /NOVA/Views/Shared/_Layout_MES.cshtml
 /NOVA/Views/Uretim/Index.cshtml
+/NOVA/Outputs/Labels
