Response yapısı oluşturuldu.

--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -387,6 +387,9 @@
     <Compile Include="Utils\AuthHelper.cs" />
     <Compile Include="Utils\PrintHelper.cs" />
     <Compile Include="Utils\RoleHelper.cs" />
+    <Compile Include="Wrappers\Abstract\IResponse.cs" />
+    <Compile Include="Wrappers\Concrete\ErrorResponse.cs" />
+    <Compile Include="Wrappers\Concrete\SuccessResponse.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\boxicons\css\animations.css" />
