--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ bld/
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
-#wwwroot/
+wwwroot/
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
@@ -366,3 +366,5 @@ FodyWeavers.xsd
 /NOVA/Views/Shared/_Layout_MES.cshtml
 /NOVA/Views/Uretim/Index.cshtml
 /NOVA/Outputs/Labels
+/NOVA/wwwroot/css/BarcodeTrackTree.css
+/NOVA/wwwroot/js/BarcodeTrack.js
