--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -7569,6 +7569,7 @@
     <Content Include="bootstrap-icons-1.11.2\font\bootstrap-icons.scss" />
     <Content Include="bootstrap-icons-1.11.2\font\fonts\bootstrap-icons.woff" />
     <Content Include="bootstrap-icons-1.11.2\font\fonts\bootstrap-icons.woff2" />
+    <Content Include="wwwroot\audio\mes_yeni_kayit.mp3" />
     <Content Include="wwwroot\css\BarcodeScanner.css" />
     <Content Include="wwwroot\css\BarcodeTrackTree.css" />
     <Content Include="wwwroot\css\Themes.css" />
@@ -11910,6 +11911,130 @@
     <Content Include="wwwroot\libs\panzoom\lib\transform.js" />
     <Content Include="wwwroot\libs\panzoom\test\kinetic.js" />
     <Content Include="wwwroot\libs\panzoom\test\panzoom.js" />
+    <Content Include="wwwroot\libs\select2\css\select2.css" />
+    <Content Include="wwwroot\libs\select2\css\select2.min.css" />
+    <Content Include="wwwroot\libs\select2\js\i18n\af.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\af.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ar.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ar.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\az.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\az.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\bg.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\bg.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\bn.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\bn.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\bs.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\bs.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ca.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ca.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\cs.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\cs.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\da.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\da.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\de.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\de.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\dsb.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\dsb.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\el.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\el.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\en.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\en.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\es.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\es.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\et.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\et.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\eu.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\eu.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\fa.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\fa.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\fi.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\fi.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\fr.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\fr.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\gl.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\gl.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\he.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\he.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\hi.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\hi.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\hr.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\hr.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\hsb.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\hsb.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\hu.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\hu.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\hy.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\hy.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\id.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\id.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\is.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\is.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\it.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\it.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ja.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ja.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ka.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ka.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\km.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\km.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ko.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ko.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\lt.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\lt.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\lv.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\lv.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\mk.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\mk.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ms.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ms.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\nb.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\nb.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ne.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ne.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\nl.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\nl.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\pl.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\pl.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ps.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ps.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\pt-BR.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\pt-BR.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\pt.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\pt.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ro.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ro.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ru.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\ru.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\sk.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\sk.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\sl.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\sl.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\sq.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\sq.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\sr-Cyrl.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\sr-Cyrl.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\sr.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\sr.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\sv.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\sv.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\th.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\th.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\tk.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\tk.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\tr.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\tr.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\uk.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\uk.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\vi.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\vi.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\zh-CN.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\zh-CN.min.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\zh-TW.js" />
+    <Content Include="wwwroot\libs\select2\js\i18n\zh-TW.min.js" />
+    <Content Include="wwwroot\libs\select2\js\select2.full.js" />
+    <Content Include="wwwroot\libs\select2\js\select2.full.min.js" />
+    <Content Include="wwwroot\libs\select2\js\select2.js" />
+    <Content Include="wwwroot\libs\select2\js\select2.min.js" />
     <Content Include="wwwroot\libs\sweetalert2\sweetalert2.all.js" />
     <Content Include="wwwroot\libs\sweetalert2\sweetalert2.all.min.js" />
     <Content Include="wwwroot\libs\sweetalert2\sweetalert2.css" />
@@ -11918,6 +12043,18 @@
     <Content Include="wwwroot\libs\sweetalert2\sweetalert2.min.js" />
     <Content Include="wwwroot\libs\TableDnD\jquery.tablednd.js" />
     <Content Include="wwwroot\libs\TableDnD\jquery.tablednd.min.js" />
+    <Content Include="wwwroot\libs\vanilla-marquee\dist\vanilla-marquee.js" />
+    <Content Include="wwwroot\libs\vanilla-marquee\dist\vanilla-marquee.min.js" />
+    <Content Include="wwwroot\libs\xlsx\cpexcel.js" />
+    <Content Include="wwwroot\libs\xlsx\cpexcel.min.js" />
+    <Content Include="wwwroot\libs\xlsx\shim.min.js" />
+    <Content Include="wwwroot\libs\xlsx\xlsx.core.min.js" />
+    <Content Include="wwwroot\libs\xlsx\xlsx.extendscript.js" />
+    <Content Include="wwwroot\libs\xlsx\xlsx.extendscript.min.js" />
+    <Content Include="wwwroot\libs\xlsx\xlsx.full.min.js" />
+    <Content Include="wwwroot\libs\xlsx\xlsx.mini.min.js" />
+    <Content Include="wwwroot\libs\xlsx\xlsx.zahl.js" />
+    <Content Include="wwwroot\libs\xlsx\xlsx.zahl.min.js" />
     <Content Include="wwwroot\videos\login-background.mp4" />
     <None Include="compilerconfig.json" />
     <None Include="compilerconfig.json.defaults">
@@ -12375,6 +12512,7 @@
     <Content Include="Views\Shared\_Layout_Genel.cshtml" />
     <Content Include="Views\Shared\Layout_Empty.cshtml" />
     <Content Include="Views\Shared\BarcodeScanner.cshtml" />
+    <Content Include="Views\Sevkiyat\SaticiSiparisRaporuPartials\SiparisRaporu_HazırListe.cshtml" />
     <None Include="Views\Shared\_Layout_kullanici.cshtml" />
     <Content Include="Views\Shared\_Layout_Kur.cshtml" />
     <Content Include="Views\Shared\_layout_satinalma.cshtml" />
@@ -12410,6 +12548,7 @@
     <Content Include="Views\Uretim\Partials\MES\AllMachines\Test.cshtml" />
     <Content Include="Views\Uretim\Partials\MES\Islem\IslemTablosu.cshtml" />
     <Content Include="Views\Test\LayoutDemo.cshtml" />
+    <Content Include="Views\Uretim\Izlenebilirlik.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -12632,6 +12771,12 @@
     <Content Include="wwwroot\libs\hammerjs\hammer.min.js.map" />
     <Content Include="wwwroot\libs\hammerjs\hammer.min.map" />
     <Content Include="wwwroot\libs\hammerjs\CHANGELOG.md" />
+    <Content Include="wwwroot\libs\vanilla-marquee\LICENSE" />
+    <Content Include="wwwroot\libs\vanilla-marquee\package.json" />
+    <Content Include="wwwroot\libs\vanilla-marquee\README.md" />
+    <Content Include="wwwroot\libs\xlsx\xlsx.core.min.map" />
+    <Content Include="wwwroot\libs\xlsx\xlsx.full.min.map" />
+    <Content Include="wwwroot\libs\xlsx\xlsx.mini.min.map" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -13025,6 +13170,7 @@
     <TypeScriptCompile Include="wwwroot\libs\observable-slim\observable-slim.d.ts" />
     <TypeScriptCompile Include="wwwroot\libs\panzoom\index.d.ts" />
     <TypeScriptCompile Include="wwwroot\libs\sweetalert2\sweetalert2.d.ts" />
+    <TypeScriptCompile Include="wwwroot\libs\vanilla-marquee\dist\vanilla-marquee.d.ts" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
