--- a/NOVA/Web.config
+++ b/NOVA/Web.config
@@ -26,11 +26,12 @@
       </system.Web>
   -->
   <system.web>
+	  <machineKey validationKey="AutoGenerate"/>
     <globalization uiCulture="tr" culture="tr-TR" fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" responseHeaderEncoding="windows-1254" />
     <authentication mode="Forms">
-      <forms loginUrl="/Login/Login" defaultUrl="/Login/Login" timeout="240" cookieless="UseCookies" />
+      <forms loginUrl="/Login/Login" defaultUrl="/Login/Login" timeout="525600" cookieless="UseCookies" />
     </authentication>
-    <sessionState mode="InProc" timeout="240" cookieless="false" />
+    <sessionState mode="InProc" timeout="525600" cookieless="false" />
     <compilation debug="false" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
     <customErrors mode="Off">
