Uretim planlama sayfasına başlandı. Güncel viewlar

--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,4 @@ FodyWeavers.xsd
 /NOVA/Outputs/Labels
 /NOVA/wwwroot/css/BarcodeTrackTree.css
 /NOVA/wwwroot/js/BarcodeTrack.js
+/NOVA/Views/SatinAlma/Profil/Index.cshtml
