--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -11588,6 +11588,52 @@
     <Content Include="wwwroot\libs\jquery\jquery.min.js" />
     <Content Include="wwwroot\libs\jquery\jquery.slim.js" />
     <Content Include="wwwroot\libs\jquery\jquery.slim.min.js" />
+    <Content Include="wwwroot\libs\litepicker\bundle.js" />
+    <Content Include="wwwroot\libs\litepicker\bundle.min.js" />
+    <Content Include="wwwroot\libs\litepicker\css\litepicker.css" />
+    <Content Include="wwwroot\libs\litepicker\css\litepicker.min.css" />
+    <Content Include="wwwroot\libs\litepicker\css\plugins\keyboardnav.js.css" />
+    <Content Include="wwwroot\libs\litepicker\css\plugins\keyboardnav.js.min.css" />
+    <Content Include="wwwroot\libs\litepicker\css\plugins\mobilefriendly.js.css" />
+    <Content Include="wwwroot\libs\litepicker\css\plugins\mobilefriendly.js.min.css" />
+    <Content Include="wwwroot\libs\litepicker\css\plugins\multiselect.js.css" />
+    <Content Include="wwwroot\libs\litepicker\css\plugins\multiselect.js.min.css" />
+    <Content Include="wwwroot\libs\litepicker\css\plugins\ranges.js.css" />
+    <Content Include="wwwroot\libs\litepicker\css\plugins\ranges.js.min.css" />
+    <Content Include="wwwroot\libs\litepicker\js\main.js" />
+    <Content Include="wwwroot\libs\litepicker\js\main.min.js" />
+    <Content Include="wwwroot\libs\litepicker\litepicker.amd.js" />
+    <Content Include="wwwroot\libs\litepicker\litepicker.amd.min.js" />
+    <Content Include="wwwroot\libs\litepicker\litepicker.commonjs2.js" />
+    <Content Include="wwwroot\libs\litepicker\litepicker.commonjs2.min.js" />
+    <Content Include="wwwroot\libs\litepicker\litepicker.js" />
+    <Content Include="wwwroot\libs\litepicker\litepicker.min.js" />
+    <Content Include="wwwroot\libs\litepicker\litepicker.umd.js" />
+    <Content Include="wwwroot\libs\litepicker\litepicker.umd.min.js" />
+    <Content Include="wwwroot\libs\litepicker\nocss\litepicker.amd.js" />
+    <Content Include="wwwroot\libs\litepicker\nocss\litepicker.amd.min.js" />
+    <Content Include="wwwroot\libs\litepicker\nocss\litepicker.commonjs2.js" />
+    <Content Include="wwwroot\libs\litepicker\nocss\litepicker.commonjs2.min.js" />
+    <Content Include="wwwroot\libs\litepicker\nocss\litepicker.js" />
+    <Content Include="wwwroot\libs\litepicker\nocss\litepicker.min.js" />
+    <Content Include="wwwroot\libs\litepicker\nocss\litepicker.umd.js" />
+    <Content Include="wwwroot\libs\litepicker\nocss\litepicker.umd.min.js" />
+    <Content Include="wwwroot\libs\litepicker\nocss\plugins\keyboardnav.js" />
+    <Content Include="wwwroot\libs\litepicker\nocss\plugins\keyboardnav.min.js" />
+    <Content Include="wwwroot\libs\litepicker\nocss\plugins\mobilefriendly.js" />
+    <Content Include="wwwroot\libs\litepicker\nocss\plugins\mobilefriendly.min.js" />
+    <Content Include="wwwroot\libs\litepicker\nocss\plugins\multiselect.js" />
+    <Content Include="wwwroot\libs\litepicker\nocss\plugins\multiselect.min.js" />
+    <Content Include="wwwroot\libs\litepicker\nocss\plugins\ranges.js" />
+    <Content Include="wwwroot\libs\litepicker\nocss\plugins\ranges.min.js" />
+    <Content Include="wwwroot\libs\litepicker\plugins\keyboardnav.js" />
+    <Content Include="wwwroot\libs\litepicker\plugins\keyboardnav.min.js" />
+    <Content Include="wwwroot\libs\litepicker\plugins\mobilefriendly.js" />
+    <Content Include="wwwroot\libs\litepicker\plugins\mobilefriendly.min.js" />
+    <Content Include="wwwroot\libs\litepicker\plugins\multiselect.js" />
+    <Content Include="wwwroot\libs\litepicker\plugins\multiselect.min.js" />
+    <Content Include="wwwroot\libs\litepicker\plugins\ranges.js" />
+    <Content Include="wwwroot\libs\litepicker\plugins\ranges.min.js" />
     <Content Include="wwwroot\libs\lodash.js\lodash.core.js" />
     <Content Include="wwwroot\libs\lodash.js\lodash.core.min.js" />
     <Content Include="wwwroot\libs\lodash.js\lodash.fp.js" />
@@ -12786,6 +12832,7 @@
     <Folder Include="Views\SessionAuthorizeAttribute\" />
     <Folder Include="Views\SessionTimeoutAttribute\" />
     <Folder Include="Views\_Session\" />
+    <Folder Include="wwwroot\libs\bootstrap-datepicker\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -13177,6 +13224,15 @@
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="Content\bootstrap-table-master\index.d.ts" />
+    <TypeScriptCompile Include="wwwroot\libs\litepicker\types\calendar.d.ts" />
+    <TypeScriptCompile Include="wwwroot\libs\litepicker\types\core.d.ts" />
+    <TypeScriptCompile Include="wwwroot\libs\litepicker\types\datetime.d.ts" />
+    <TypeScriptCompile Include="wwwroot\libs\litepicker\types\index.d.ts" />
+    <TypeScriptCompile Include="wwwroot\libs\litepicker\types\interfaces.d.ts" />
+    <TypeScriptCompile Include="wwwroot\libs\litepicker\types\litepicker.d.ts" />
+    <TypeScriptCompile Include="wwwroot\libs\litepicker\types\methods.d.ts" />
+    <TypeScriptCompile Include="wwwroot\libs\litepicker\types\utils.d.ts" />
+    <TypeScriptCompile Include="wwwroot\libs\litepicker\types\window.d.ts" />
     <TypeScriptCompile Include="wwwroot\libs\magic-snowflakes\dist\flake.d.ts" />
     <TypeScriptCompile Include="wwwroot\libs\magic-snowflakes\dist\helpers\dom.d.ts" />
     <TypeScriptCompile Include="wwwroot\libs\magic-snowflakes\dist\helpers\number.d.ts" />
