sevkiyat girişdepo=35 olarak değiştirildi

--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -386,6 +386,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Utils\AuthHelper.cs" />
+    <Compile Include="Utils\Imzalar.cs" />
     <Compile Include="Utils\RoleHelper.cs" />
     <Compile Include="Wrappers\Abstract\IResponse.cs" />
     <Compile Include="Wrappers\Concrete\ErrorResponse.cs" />
@@ -12592,6 +12593,7 @@
     <Content Include="Views\Uretim\Partials\MES\Islem\IslemTablosu.cshtml" />
     <Content Include="Views\Test\LayoutDemo.cshtml" />
     <Content Include="Views\Uretim\Izlenebilirlik.cshtml" />
+    <Content Include="Views\Uretim\UretimPlani.cshtml" />
     <None Include="Views\Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -12614,7 +12616,7 @@
     <Content Include="Views\Shared\_Layout_inside.cshtml" />
     <Content Include="Views\YonetimPaneli\Yetki.cshtml" />
     <Content Include="Views\Satis\Index.cshtml" />
-    <Content Include="Views\YonetimPaneli\Kullanici.cshtml" />
+    <Content Include="Views\YonetimPaneli\UygulamaAyarlari.cshtml" />
     <Content Include="Views\Shared\_Layout_anasayfa.cshtml" />
     <Content Include="Views\YonetimPaneli\MailForm.cshtml" />
     <Content Include="Views\YonetimPaneli\MailFormToplu.cshtml" />
@@ -13328,8 +13330,6 @@
           <DevelopmentServerPort>50324</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://localhost:44332/</IISUrl>
-          <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
-          <IISAppRootUrl>http://localhost:44332/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
