Üretim ve Sevkiyat Controller güncellendi. Sevkiyat View güncellendi. Üretim sayfasına SM01 eklendi.

--- a/NOVA/NOVA.csproj
+++ b/NOVA/NOVA.csproj
@@ -12087,6 +12087,54 @@
     <Content Include="wwwroot\libs\sweetalert2\sweetalert2.min.js" />
     <Content Include="wwwroot\libs\TableDnD\jquery.tablednd.js" />
     <Content Include="wwwroot\libs\TableDnD\jquery.tablednd.min.js" />
+    <Content Include="wwwroot\libs\tippy.js\animations\perspective-extreme.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\perspective-extreme.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\perspective-subtle.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\perspective-subtle.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\perspective.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\perspective.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\scale-extreme.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\scale-extreme.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\scale-subtle.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\scale-subtle.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\scale.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\scale.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\shift-away-extreme.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\shift-away-extreme.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\shift-away-subtle.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\shift-away-subtle.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\shift-away.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\shift-away.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\shift-toward-extreme.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\shift-toward-extreme.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\shift-toward-subtle.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\shift-toward-subtle.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\shift-toward.css" />
+    <Content Include="wwwroot\libs\tippy.js\animations\shift-toward.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\backdrop.css" />
+    <Content Include="wwwroot\libs\tippy.js\backdrop.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\border.css" />
+    <Content Include="wwwroot\libs\tippy.js\border.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\svg-arrow.css" />
+    <Content Include="wwwroot\libs\tippy.js\svg-arrow.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\themes\light-border.css" />
+    <Content Include="wwwroot\libs\tippy.js\themes\light-border.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\themes\light.css" />
+    <Content Include="wwwroot\libs\tippy.js\themes\light.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\themes\material.css" />
+    <Content Include="wwwroot\libs\tippy.js\themes\material.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\themes\translucent.css" />
+    <Content Include="wwwroot\libs\tippy.js\themes\translucent.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\tippy-bundle.umd.js" />
+    <Content Include="wwwroot\libs\tippy.js\tippy-bundle.umd.min.js" />
+    <Content Include="wwwroot\libs\tippy.js\tippy.cjs.js" />
+    <Content Include="wwwroot\libs\tippy.js\tippy.cjs.min.js" />
+    <Content Include="wwwroot\libs\tippy.js\tippy.css" />
+    <Content Include="wwwroot\libs\tippy.js\tippy.esm.js" />
+    <Content Include="wwwroot\libs\tippy.js\tippy.esm.min.js" />
+    <Content Include="wwwroot\libs\tippy.js\tippy.min.css" />
+    <Content Include="wwwroot\libs\tippy.js\tippy.umd.js" />
+    <Content Include="wwwroot\libs\tippy.js\tippy.umd.min.js" />
     <Content Include="wwwroot\libs\vanilla-marquee\dist\vanilla-marquee.js" />
     <Content Include="wwwroot\libs\vanilla-marquee\dist\vanilla-marquee.min.js" />
     <Content Include="wwwroot\libs\xlsx\cpexcel.js" />
@@ -12821,6 +12869,12 @@
     <Content Include="wwwroot\libs\xlsx\xlsx.core.min.map" />
     <Content Include="wwwroot\libs\xlsx\xlsx.full.min.map" />
     <Content Include="wwwroot\libs\xlsx\xlsx.mini.min.map" />
+    <Content Include="wwwroot\libs\tippy.js\tippy-bundle.umd.js.map" />
+    <Content Include="wwwroot\libs\tippy.js\tippy-bundle.umd.min.js.map" />
+    <Content Include="wwwroot\libs\tippy.js\tippy.cjs.js.map" />
+    <Content Include="wwwroot\libs\tippy.js\tippy.esm.js.map" />
+    <Content Include="wwwroot\libs\tippy.js\tippy.umd.js.map" />
+    <Content Include="wwwroot\libs\tippy.js\tippy.umd.min.js.map" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
